--- a/src/components/EquipmentMaintenance/ConflictsTable.scss
+++ b/src/components/EquipmentMaintenance/ConflictsTable.scss
@@ -1,5 +1,6 @@
 .jobsConflictContainer {
   max-width: 100%;
+  max-height: calc(100vh - 9rem);
   display: flex;
   overflow: auto;
 }
