--- a/src/components/EquipmentMaintenance/JobDetails.scss
+++ b/src/components/EquipmentMaintenance/JobDetails.scss
@@ -24,6 +24,7 @@ rux-textarea::part(label) {
 
   &__left-panel {
     grid-area: left-panel;
+    min-height: calc(100vh - 9rem);
     max-height: calc(100vh - 9rem);
     background-color: var(--color-background-surface-default);
     box-shadow: var(--container-color-border) 0 0 0 1px;
@@ -31,6 +32,7 @@ rux-textarea::part(label) {
 
   &__right-panel {
     grid-area: right-panel;
+    min-height: calc(100vh - 9rem);
     max-height: calc(100vh - 9rem);
     background-color: var(--color-background-surface-default);
     box-shadow: var(--container-color-border) 0 0 0 1px;
