--- a/src/components/EquipmentMaintenance/ScheduleJob.scss
+++ b/src/components/EquipmentMaintenance/ScheduleJob.scss
@@ -27,6 +27,7 @@ rux-textarea::part(label) {
 
   &__left-panel {
     grid-area: left-panel;
+    min-height: calc(100vh - 9rem);
     max-height: calc(100vh - 9rem);
     background-color: var(--color-background-surface-default);
     box-shadow: var(--container-color-border) 0 0 0 1px;
@@ -34,6 +35,7 @@ rux-textarea::part(label) {
 
   &__right-panel {
     grid-area: right-panel;
+    min-height: calc(100vh - 9rem);
     max-height: calc(100vh - 9rem);
     background-color: var(--color-background-surface-default);
     box-shadow: var(--container-color-border) 0 0 0 1px;
